@@ -5,8 +5,10 @@ QoL Improvements:
 Additions:
 
 Updates:
+	- To combat possible UI taint, a small delay has been added to cinematic and in-game movie cancellation.
 	
 Fixes:
 	- Fixed a problem with the call boards and accepting Tanaan Jungle.
+	- Fixed a problem with in-game movies not completing correctly with Cinematics automation disabled, causing the UI to become unusable.
 	
 Removed:
